--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
         <img src="/img/logo.svg" alt="" class="imagem--alura-logo">
     </header>
     <main class="container">
+     <section>
         <span class="input__mensagem">
             <label class="titulo--principal"></label>
             <input type="text" name="texto-cripto" id="texto-cripto" class="input" placeholder="Digite seu texto">
@@ -24,14 +25,21 @@
             <img src="/img/unicode.png" alt="" class="unicode">
             <p class="descricao">Apenas letras minúsculas e sem acento.</p>
         </div>
-        <div class="botoes">
-            <button class="button">Criptografar</button>
-            <button class="button alternative">Descriptografar</button>
-        </div>
-        <div class="caixa__mensagem">
-            <h2 class="titulo--mensagem">Nenhuma mensagem encontrada</h2>
-            <p class="texto--mensagem">Digite um texto que você deseja criptografar ou desencriptografar.</p>
-        </div>
+     </section>
+        <section>
+            <div class="botoes">
+                <button class="button">Criptografar</button>
+                <button class="button alternative">Descriptografar</button>
+            </div>
+            <div class="caixa__mensagem">
+                <span class="texto-copiado">
+                     <h2 class="titulo--mensagem">Nenhuma mensagem encontrada</h2>
+                </span>
+               
+                <p class="texto--mensagem">Digite um texto que você deseja criptografar ou desencriptografar.</p>
+            </div>
+            <button class="copy">Copiar</button>
+        </section>
     </main>
 
     <script src="js/script.js"></script>
