finalizado função botão copiar

--- a/componentes.html
+++ b/componentes.html
@@ -12,6 +12,7 @@
 
     <button class="button">Criptografar</button>
     <button class="button alternative">Descriptografar</button>
+    <button class="button alternative" id="copiar">Copiar</button>
     
     <div class="caixa__mensagem">
         <h2 class="titulo--mensagem">Nenhuma mensagem encontrada</h2>
